# rstatus

./: Cargo.toml  README.md
src/: main.rs
src/modules/: battery.rs  datetime.rs  disk.rs  mod.rs  network.rs  pipewire.rs
