[package]
name = "rstatus"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["fs", "net"] }
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
